# fpps4.net

./: .gitignore  README.md  private_html
backend/: Cargo.toml
backend/src/: config.rs  images.rs  macros.rs  main.rs  networking.rs  parsing.rs
document_errors/: 404.html
public_html/: 404.php  CHANGELOG.md  app.js  index.html  robots.txt  sitemap.xml  sizes.css  style.css
public_html/_parts/: navbar.html  required.js
public_html/_scripts/: api.php  search.php  updater.php
public_html/compatibility/: app.js  index.html  styles.css
public_html/images/: NA.avif
public_html/parts/: footer.html  navbar.html  navbar_old.html
public_html/scripts/: api.php  bot.php  issue_fetcher.php  search.php
